course-03/udacity-c3-deployment/k8s/istio/all-ab-deployment/backend-user-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: backend-user
  name: backend-user
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        service: backend-user
    spec:
      containers:
      - image: selmy/udacity-restapi-user:latest
        name: backend-user 
        imagePullPolicy: IfNotPresent 
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"      
        volumeMounts:
        - name: aws-secret
          mountPath: "/root/.aws/"
          readOnly: true  
      restartPolicy: Always
      volumes:
      - name: aws-secret
        secret:
          secretName: aws-secret
