course-03/udacity-c3-deployment/k8s/istio/all-ab-deployment/frontend-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v2
  labels:
    app: frontend-v2
spec:
  replicas: 1
  selector:
    matchLabels:
        app: frontend-v2
        version: v2.0.0
  template:
    metadata:
      labels:
        app: frontend-v2
        version: v2.0.0     
    spec:
      containers:
      - image: selmy/udacity-frontend:v2
        name: frontend-v2
        imagePullPolicy: IfNotPresent    
        ports:
        - name: http
          containerPort: 80
---
