course-03/udacity-c3-deployment/k8s/istio/all-ab-deployment/reverseproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverseproxy
  labels:
    app: reverseproxy
  
spec:
  replicas: 1
  selector:
    matchLabels:
        app: reverseproxy
        version: v1.0.0
  template:
    metadata:
      labels:
        app: reverseproxy
        version: v1.0.0
    spec:
      containers:
      - image: selmy/reverseproxy
        name: reverseproxy
        imagePullPolicy: IfNotPresent              
        ports:
        - name: http
          containerPort: 8080
