course-03/udacity-c3-deployment/k8s/istio/all-ab-deployment/frontend-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2
  labels:
    app: frontend-v2
spec:
  ports:
  - name: http
    port: 8100
    targetPort: http
  selector:
    app: frontend-v2
    version: v2.0.0
---
