course-03/udacity-c3-deployment/k8s/istio/all-ab-deployment/reverseproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverseproxy
  labels:
    service: reverseproxy
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: reverseproxy
    version: v1.0.0
---
