course-03/udacity-c3-deployment/k8s/istio/all-ab-deployment/frontend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8100
        name: http
        protocol: HTTP
      hosts:
        - "*"
