course-03/udacity-c3-deployment/k8s/istio/all-ab-deployment/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontendinfo
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
    - route:
      - destination:
          host: frontend
          port:
            number: 8100
        weight: 40
      - destination:
          host: frontend-v2
          port:
            number: 8100
        weight: 60
