course-03/udacity-c3-deployment/k8s/istio/all-ab-deployment/reverseproxy-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reverseproxyinfo
spec:
  hosts:
  - "*"
  gateways:
  - reverseproxy-gateway
 http:
    - route:
      - destination:
          host: reverseproxy
          port:
            number: 8080
